--- a/converted/.htaccess
+++ b/converted/.htaccess
@@ -1,4 +1,4 @@
 Options -Indexes
 RewriteEngine On
 RewriteCond %{HTTP_REFERER} !^http://localhost/ [NC]
-RewriteRule \.(jpg|jpeg|png|gif|webp)$ - [NC,F,L]
+RewriteRule \.(jpg|jpeg|png|gif|webp|avif)$ - [NC,F,L]
