update UI, update dashboard.php

--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
 
-ErrorDocument 400 /error.php?code=400
-ErrorDocument 403 /error.php?code=403
-ErrorDocument 404 /error.php?code=404
-ErrorDocument 500 /error.php?code=500
+ErrorDocument 400 ./Error.php?code=400
+ErrorDocument 403 ./Error.php?code=403
+ErrorDocument 404 ./Error.php?code=404
+ErrorDocument 500 ./Error.php?code=500
